gccida/c3/ix86_emit_restore_regs_using_mov
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4782:21: error: use of undeclared identifier 'machine_mode'
v6 = gen_rtx_REG( ( machine_mode)( ( ( v4 & 0x2000000 | 0x500000000uLL) - 1) >> 32), v5); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4783:21: error: use of undeclared identifier 'machine_mode'
v7 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), pointer); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4784:30: error: use of undeclared identifier 'machine_mode'
v8 = adjust_address_1( v7, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), offset, 1, 1); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4805:22: error: use of undeclared identifier 'machine_mode'
v13 = gen_rtx_REG( ( machine_mode)( ( ( v4 & 0x2000000 | 0x500000000uLL) - 1) >> 32), v5); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4806:22: error: use of undeclared identifier 'machine_mode'
v14 = gen_rtx_MEM( ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), pointer); 
                     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_emit_restore_regs_using_mov/src/i386.c:4809:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/ix86_emit_restore_regs_using_mov/src/obj/i386.o] Error 1
